# highlight-bouldering

./: .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_video_ingestion.ipynb
src/: video.py  video_wrapper.py  ytb_video_retriever.py
src/features/: olympic_rings_detection.py
src/metrics/: cosine_similarity.py  metric_interface.py
src/video/: __init__.py  video.py  video_wrapper.py
src/video_embedder/: clip.py  video_embedder_interface.py
